# gsim-ops

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  combo-legs-adjudication-20260718.md  config.juicefs.yaml  config.prod-legacy.yaml  config.prod.yaml  config.yaml  contracts-baseline.toml  docker-compose.test.yml  ops.py  pyproject.toml  pyrightconfig.json
.claude/: ai-collaboration-roadmap.md  link-memory-kimi.sh  link-memory.sh  plans.md  roadmap.md
.claude/agents/: cc-data-auditor.md  docs-auditor.md  docs-updater.md  factor-analyst.md  pipeline-debugger.md  report-analyst.md
.claude/memory/: MEMORY.md  feedback_commit_style.md  feedback_destructive_ops.md  feedback_plan_mode.md  feedback_reply_style.md  feedback_run-it-yourself.md  feedback_session_management.md  project-combo-test-pipeline.md  project_alpha_dump_constraints.md  project_alpha_dump_to_feature_migration.md  project_cli_command_redesign.md  project_factor_business_context.md  project_factor_command_semantics.md  project_factor_library_storage_architecture.md  project_factor_lock_cross_machine.md  project_factor_state_machine.md  project_firewall_1d_instrument_vector.md  project_incident_cc_data_drift.md  project_incident_gsim_code_drift.md  project_incident_interval5m_bugs.md  project_incident_redis_maxclients.md  project_jfs_client_env_name_gotcha.md  project_list_still_scans_disk.md  project_ops_roadmap_ideas.md  project_uv_tool_env_deps.md  reference_cc_all_data_layout.md  reference_company_data_architecture.md  reference_factor_library_system_design.md  reference_factor_validation_pipeline.md  reference_gsim_architecture.md  reference_gsim_data_modules.md  reference_gsim_xml_config.md  reference_nfs_cc_migration_sop.md  reference_server_topology.md  user_profile.md
.github/workflows/: ci.yml
.sisyphus/plans/: factor-list-info.md  factor-management-enhance.md
compiler/: __init__.py  args.py  factor.py
docs/: README.md  architecture.md  cc-data-layout.md  combo-architecture-decision.md  combo-calling-convention.md  combo-train-spec.md  factor-aggregate-plan.md  factor-state-machine.md  gsim-architecture.md  gsim-changelog.md  gsim-data-sources.md  gsim-factor-validation.md  gsim-factor-workflow.md  gsim-xml-config.md  legacy-cleanup.md  roadmap.md  schema-v2.md  schema-v3.md  shared-staging-queue.md  sync-refactor-plan.md
docs/components/: check-pipeline.md  commands.md  data-model.md  storage-layout.md  topology.md
docs/design/: combo-exp.md  combo-production.md  compliance-survey.md  factor-aggregate-plan.md  factor-produce-groups.md  factor-produce-v3.md  produce-batch-engine.md  schema-v3.md
docs/gsim/: README.md  architecture.md  cc-data-layout.md  cc_all_fields.csv  changelog.md  data-sources.md  factor-validation.md  factor-workflow.md  xml-config.md
docs/incidents/: 2026-06-06-cc-data-drift-160-vs-147.md  2026-06-06-gsim-code-drift-three-sites.md  2026-06-07-interval5m-bugs.md
docs/ops/: nfs-cc-migration.md
docs/remediation/: AUDIT-DUMP-CONSISTENCY-RESULT.md  AUDIT-DUMP-CONSISTENCY.md  BATCH-PRODUCE-MECHANICS-RESULT.md  DEPLOY-SHARED-STAGING-RESULT.md  DEPLOY-SHARED-STAGING.md  DISCOVER-170-ENV-RESULT.md  DISCOVER-170-ENV.md  DISCOVER-PRODUCE-PROD-RESULT.md  DISCOVER-PRODUCE-PROD.md  DOCTOR-V11-TRIAGE.md  INCIDENT-144-PACK.md  JOURNAL.md  MIGRATE-170-RESULT.md  MIGRATE-PROD-XML-RESULT.md  RECONCILE-BCORR-POOLS-RESULT.md  RECONCILE-BCORR-POOLS.md  ROTATE-MINIO-FEISHU-RESULT.md  ROTATE-MINIO-FEISHU.md  VERIFICATION-REPORT-WAVE3.md  VERIFY-AGGREGATE-P2P3-RESULT.md  VERIFY-AGGREGATE-P2P3.md  VERIFY-AGGREGATE-SMALLS-RESULT.md  VERIFY-AGGREGATE-SMALLS.md  VERIFY-DISPLAY-LIFT-RESULT.md  VERIFY-DOCTOR-RESULT.md  VERIFY-DOCTOR-V11-RESULT.md  VERIFY-DOCTOR.md  VERIFY-I2-RESULT.md  VERIFY-I2.md  VERIFY-L3-L4-RESULT.md  VERIFY-L3-L4.md  VERIFY-LEGACY-CLEANUP-RESULT.md  VERIFY-LEGACY-CLEANUP.md  VERIFY-OPS-SETUP-RESULT.md  VERIFY-PV7-RESULT.md  VERIFY-PV7.md  VERIFY-SCHEMA-V2A-RESULT.md  VERIFY-SCHEMA-V2A.md  VERIFY-SCHEMA-V2B-RESULT.md  VERIFY-SCHEMA-V2B.md  (+6 more)
docs/reports/: architecture-evolution-20260707.md  code-craft-20260707.md  full-review-20260707.md  project-review-20260707.md
ops/: __init__.py  main.py
ops/check/: __init__.py  args.py  check.py
ops/check_bias/: __init__.py  args.py  check_bias.py  data_firewall.py  tmp.py  xml.py
ops/cli/: approve.py  backfill.py  cancel.py  check.py  clear.py  combo.py  common.py  doctor.py  health.py  info.py  list.py  pack.py  produce.py  recheck.py  refresh.py  restage.py  resubmit.py  rm.py  run.py  setup.py  status.py  submit.py  sync.py
ops/common/: config.py  exception.py  library.py  metrics.py  runner.py  ssh.py  ssh_utils.py  utils.py
ops/compiler/: args.py  backtest.py  clean.py  compile.py  env.py  factor.py  xml.py
ops/core/: CLAUDE.md  datasource.py  dumpfiles.py  factor.py  factormeta.py  library.py  metrics.py  paths.py  prodgroup.py  prodxml.py  state.py  universe.py
ops/cp/: __init__.py  args.py  transfer.py
report/: 2026-06-08-local-cc-audit.md  README.md
scp_transfer/: transfer.py
scripts/: audit_combo_legs.py  bootstrap_groups.py  build_combo_xml.py  cleanup_src_orphans.py  compliance_profile.py  compliance_shadow.py  compliance_survey.py  fix_delay_from_xml.py  migrate_prod_xml.py  produce_shadow_diff.py  reconcile_bcorr_pools.py  redis-bump-maxclients.sh  redis-diag.sh  redis-drain-and-bump.sh  redis-persist-maxclients.sh
template/: config.yaml
tests/: README.md  conftest.py  test_all_services.py  test_batch.py  test_check_routing.py  test_check_routing_json.py  test_check_scan.py  test_compliance_checker.py  test_config_resolution.py  test_derived_store_pg.py  test_doctor.py  test_doctor_fix.py  test_dumpfiles.py  test_end_to_end.py  test_factor_paths.py  test_group_store_pg.py  test_history.py  test_lifecycle_cmds.py  test_migrate_scripts.py  test_pg_pool_cleanup.py  test_prodgroup.py  test_produce.py  test_produce_groups.py  test_prodxml.py  test_pure.py  test_repository.py  test_restage.py  test_runner_logs.py  test_schema_pin.py  test_setup.py  test_state_store_pg.py  test_submit.py
(+292 files in other folders)
