[project]
name = "ops"
version = "0.1.1"
description = "Gsim Operations Tool"
readme = "README.md"
requires-python = ">=3.10"
# 2026-07-07 依赖大扫除(full-review 第三部分 §五 + Wave 1):Wave 0 删除从未
# import 的 mlflow/pandas/lxml(+stubs)/scp/zstandard/colorama、argparse backport、
# setuptools/wheel、随死代码退役的 paramiko/requests;Wave 1 (JOURNAL F1/F2) 再删
# boto3/tqdm(随 sync 栈)与 redis(随已坏的 redis state 后端;redis-sentinel
# 实例是 JFS metadata 后端,与 ops 依赖无关)。
dependencies = [
    "loguru>=0.7.2",
    "numpy>=2.2.6",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "xmltodict>=1.0.2",
]

[project.scripts]
ops = "ops.main:main"

[dependency-groups]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # psycopg ConnectionPool.__del__ 在 GC 时试图 join 自己的 worker 线程,
    # 短命 store pool (每测新建) 触发无害的 unraisable 噪音。生产是长命进程不涉及。
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "pg: 需要可达的 ops_test Postgres 库 (host 10.9.100.160:15432); 库不可达时自动 skip",
    "slow: 真跑 gsim 的端到端测试 (慢, 默认不跑)",
    "e2e: 端到端测试 (真实 gsim + cc 数据); 环境不可达时自动 skip",
]

[tool.setuptools.packages.find]
include = ["ops*"]
