[project]
name = "ops"
version = "0.1.1"
description = "Gsim Operations Tool"
readme = "README.md"
requires-python = ">=3.10"
# 2026-07-07 依赖大扫除(full-review 第三部分 §五 + Wave 1):Wave 0 删除从未
# import 的 mlflow/pandas/lxml(+stubs)/scp/zstandard/colorama、argparse backport、
# setuptools/wheel、随死代码退役的 paramiko/requests;Wave 1 (JOURNAL F1/F2) 再删
# boto3/tqdm(随 sync 栈)与 redis(随已坏的 redis state 后端;redis-sentinel
# 实例是 JFS metadata 后端,与 ops 依赖无关)。
dependencies = [
    "loguru>=0.7.2",
    "numpy>=2.2.6",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "xmltodict>=1.0.2",
]

[project.scripts]
ops = "ops.main:main"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=8",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
filterwarnings = [
    # psycopg ConnectionPool.__del__ 在 GC 时试图 join 自己的 worker 线程,
    # 短命 store pool (每测新建) 触发无害的 unraisable 噪音。生产是长命进程不涉及。
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
markers = [
    "pg: 需要可达的 ops_test Postgres 库 (host 10.9.100.160:15432); 库不可达时自动 skip",
    "slow: 真跑 gsim 的端到端测试 (慢, 默认不跑)",
    "e2e: 端到端测试 (真实 gsim + cc 数据); 环境不可达时自动 skip",
]

[tool.setuptools.packages.find]
include = ["ops*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
# 首批规则按 full-review 第二部分 A 挑选,对准本库实际病灶:
#   F401/F841 死导入死变量, F403/F405 star import, E7 比较/裸 except 类,
#   I import 排序, UP006/007/035/045 旧式 typing, B006/B008 可变默认参数。
# 不开 pydocstyle(D)—— 与双语 docstring 约定冲突(风格守则 J10)。
select = ["F", "E7", "I", "UP006", "UP007", "UP035", "UP045", "B006", "B008"]
